--- a/index.html
+++ b/index.html
@@ -1,28 +1,86 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CDY Entertainment</title>
   <style>
+    :root {
+      --bg-color: #0e0e0e;
+      --text-color: #f0f0f0;
+      --accent-color: #aaaaaa;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background-color: #0d1117;
-      color: #c9d1d9;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: #111;
+      border-bottom: 1px solid var(--accent-color);
+    }
+
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+
+    nav a {
+      margin-left: 1.5rem;
+      color: var(--text-color);
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: var(--accent-color);
+    }
+
+    .hero {
+      height: 90vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      padding: 100px 20px;
+      padding: 0 1rem;
     }
-    h1 {
-      color: #58a6ff;
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
     }
-    a {
-      color: #58a6ff;
+
+    .hero p {
+      font-size: 1.25rem;
+      color: var(--accent-color);
+      max-width: 600px;
     }
   </style>
 </head>
 <body>
-  <h1>Selamat datang di CDY Entertainment</h1>
-  <p>Website ini sedang dalam tahap pengembangan.</p>
-  <p>Hubungi kami di <a href="mailto:info@cdyentertainment.com">info@cdyentertainment.com</a></p>
+  <header>
+    <div class="logo">CDY Entertainment</div>
+    <nav>
+      <a href="#">Beranda</a>
+      <a href="#tentang">Tentang Kami</a>
+      <a href="#proyek">Proyek Kami</a>
+      <a href="#berita">Berita & Update</a>
+      <a href="#kontak">Hubungi Kami</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Crafting Stories. Shaping Impact.</h1>
+    <p>Membawa cerita orisinal Indonesia ke dunia. Dari drama romantis hingga thriller penuh aksi, kami hadir untuk menginspirasi layar dan hati.</p>
+  </section>
 </body>
 </html>
